another fix to css from gaps on the right margin

--- a/static/tom_common/css/main_snexclone.css
+++ b/static/tom_common/css/main_snexclone.css
@@ -14,6 +14,7 @@
 body {
   font-family: 'Open Sans', sans-serif;
   padding-top: 0;
+  overflow-x: hidden;
 }
 
 .nav-link {
@@ -52,6 +53,15 @@ body {
 .dropdown-item:hover {
   background: var(--snex-navbar-dropdown-hover) !important;
   color: white !important;
+}
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: none;
 }
 
 .content {
